--- a/02 Introduction/Views/Home/Index.cshtml
+++ b/02 Introduction/Views/Home/Index.cshtml
@@ -12,6 +12,11 @@
 }
 
 <hr />
+@Html.ActionLink("Action 1", "Privacy")
+
+<a href="/home/privacy" >Action 1</a>
+
+<hr />
 
 <h1>Students from Group 2</h1>
 @foreach(var student in Model.Group2)
